--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://phys.org/news/2018-05-aim-stars-rocket.html">A 'self-eating' rocket engine could put satellites in orbit more easily</a>
+                                    <a href="https://gizmodo.com/google-plans-not-to-renew-its-contract-for-project-mave-1826488620">Google Won't Renew Contract for Project Maven, Pentagon Drone AI Imaging Program</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17209456">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17208892">
                                         
-                                            38 comments
+                                            115 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=curtis">curtis</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527882885"
+                                            href="https://news.ycombinator.com/user?id=mark-ruwt">mark-ruwt</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527880151"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    126 points
+                                    128 points
                                 </span>
                             </td>
                         </tr>
@@ -291,7 +291,7 @@
                                             href="https://news.ycombinator.com/user?id=sjcsjc">sjcsjc</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527917872"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    100 points
+                                    103 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527940803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527941404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
