--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -381,7 +381,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17211176">
                                         
-                                            21 comments
+                                            22 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=angelinaii">angelinaii</a></strong> &nbsp;•&nbsp;
@@ -399,17 +399,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.vox.com/the-big-idea/2018/5/31/17413356/low-birthrate-millennials-economy">The birthrate in the U.S. is the lowest it’s been in 30 years</a>
+                                    <a href="http://airbnb.io/lottie/">Lottie for Android, iOS, React Native, and Web</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17201236">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17209832">
                                         
-                                            117 comments
+                                            13 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pm24601">pm24601</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527809126"
+                                            href="https://news.ycombinator.com/user?id=quickthrower2">quickthrower2</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527884753"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     87 points
                                 </span>
@@ -458,7 +458,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527943203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527943803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
