--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -375,17 +375,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/@MerciMichel/ouigo-lets-play-case-study-b763f69dd89c">How we built a high-definition WebGL pinball</a>
+                                    <a href="https://hackernoon.com/how-to-get-rich-without-getting-lucky-9901caca4fd5">How to Get Rich (without getting lucky)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17213888">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17214074">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=nnx">nnx</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527935244"
+                                            href="https://news.ycombinator.com/user?id=vinnyglennon">vinnyglennon</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527939056"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     5 points
                                 </span>
@@ -399,17 +399,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/@wilw/my-name-is-wil-wheaton-i-live-with-chronic-depression-and-generalized-anxiety-i-am-not-ashamed-8f693f9c0af1">My Name Is Wil Wheaton. I Live with Chronic Depression. I Am Not Ashamed</a>
+                                    <a href="https://medium.com/@MerciMichel/ouigo-lets-play-case-study-b763f69dd89c">How we built a high-definition WebGL pinball</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17213152">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17213888">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ascorbic">ascorbic</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527922321"
+                                            href="https://news.ycombinator.com/user?id=nnx">nnx</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527935244"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     5 points
                                 </span>
@@ -458,7 +458,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527943803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527944403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
