--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.polygon.com/2018/6/1/17413542/burnout-mental-health-awareness-youtube-elle-mills-el-rubius-bobby-burns-pewdiepie">YouTube’s top creators are burning out</a>
+                                    <a href="https://www.sfchronicle.com/business/article/Energy-revolution-California-approves-massive-12957685.php">California approves $768M for electric vehicles</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17210164">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17208876">
                                         
-                                            150 comments
+                                            225 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ilamont">ilamont</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527886430"
+                                            href="https://news.ycombinator.com/user?id=prostoalex">prostoalex</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527880046"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    263 points
+                                    264 points
                                 </span>
                             </td>
                         </tr>
@@ -267,7 +267,7 @@
                                             href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527867877"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    249 points
+                                    250 points
                                 </span>
                             </td>
                         </tr>
@@ -405,7 +405,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17208065">
                                         
-                                            373 comments
+                                            379 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=spacebearmakes">spacebearmakes</a></strong> &nbsp;•&nbsp;
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527943803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527944403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
