--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -213,13 +213,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17211696">
                                         
-                                            219 comments
+                                            221 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=lando2319">lando2319</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527898667"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    305 points
+                                    306 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.latimes.com/local/lanow/la-me-ln-tesla-collision-20180529-story.html">Tesla in autopilot mode crashes into parked Laguna Beach police cruiser</a>
+                                    <a href="https://www.polygon.com/2018/6/1/17413542/burnout-mental-health-awareness-youtube-elle-mills-el-rubius-bobby-burns-pewdiepie">YouTube’s top creators are burning out</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17183057">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17210164">
                                         
-                                            467 comments
+                                            152 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=extesy">extesy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527629280"
+                                            href="https://news.ycombinator.com/user?id=ilamont">ilamont</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527886430"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     268 points
                                 </span>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527944403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527945003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
