--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -195,7 +195,7 @@
                                             href="https://news.ycombinator.com/user?id=mark-ruwt">mark-ruwt</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527880151"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    130 points
+                                    131 points
                                 </span>
                             </td>
                         </tr>
@@ -219,7 +219,7 @@
                                             href="https://news.ycombinator.com/user?id=curtis">curtis</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527883700"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    124 points
+                                    126 points
                                 </span>
                             </td>
                         </tr>
@@ -267,7 +267,7 @@
                                             href="https://news.ycombinator.com/user?id=scentoni">scentoni</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527865303"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    111 points
+                                    112 points
                                 </span>
                             </td>
                         </tr>
@@ -333,7 +333,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17211573">
                                         
-                                            71 comments
+                                            72 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rivy">rivy</a></strong> &nbsp;•&nbsp;
@@ -381,7 +381,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17211311">
                                         
-                                            20 comments
+                                            21 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=el_duderino">el_duderino</a></strong> &nbsp;•&nbsp;
@@ -519,7 +519,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://grafx2.chez.com/">GrafX2: A bitmap paint program inspired by Amiga programs</a>
+                                    <a href="http://grafx2.chez.com/">GrafX2 – A paint program inspired by Amiga programs​ Deluxe Paint and Brilliance</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
@@ -531,7 +531,7 @@
                                             href="https://news.ycombinator.com/user?id=based2">based2</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527932425"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    67 points
+                                    69 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527946804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527947403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
