--- a/jobs/page2.html
+++ b/jobs/page2.html
@@ -161,6 +161,30 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://jobs.lever.co/simplehabit/92bf6b38-82e7-4fc9-9f74-27d09de29756?lever-origin=applied&lever-source%5B%5D=Hackernews">Simple Habit is hiring our first Product Marketer</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17166178">
+                                        
+                                            comments
+                                        </a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=yunhakim">yunhakim</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527413015"
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    1 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://fullstackacademy.workable.com/jobs/186349">Fullstack Academy is looking for developers who love teaching</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -291,7 +315,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527949203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527949804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
