--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -213,7 +213,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17211573">
                                         
-                                            75 comments
+                                            76 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rivy">rivy</a></strong> &nbsp;•&nbsp;
@@ -399,19 +399,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://mobilejazz.com/blog/dark-patterns-in-design/">Dark Patterns in UI/UX Design</a>
+                                    <a href="https://github.com/OpenDUNE/OpenDUNE">OpenDUNE – An open-source recreation of the game Dune II</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17205758">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17214320">
                                         
-                                            45 comments
+                                            27 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=znq">znq</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527864566"
+                                            href="https://news.ycombinator.com/user?id=mariuz">mariuz</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527943469"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    84 points
+                                    85 points
                                 </span>
                             </td>
                         </tr>
@@ -458,7 +458,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527949203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527949804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
