--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://twitter.com/jnunemaker/status/1002610279295930369">Fewer and Faster acquires Speaker Deck from GitHub</a>
+                                    <a href="http://www.maths.ed.ac.uk/~v1ranick/papers/abel.pdf">Abel's Theorem in Problems and Solutions (2004) [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17208445">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17209635">
                                         
-                                            1 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jonmagic">jonmagic</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527877508"
+                                            href="https://news.ycombinator.com/user?id=montrose">montrose</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527883709"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     7 points
                                 </span>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527949804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527950404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
