--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -303,19 +303,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://swtch.com/gosling89ace.pdf">Ace: a syntax-driven C preprocessor (1989) [pdf]</a>
+                                    <a href="https://www.theguardian.com/travel/2016/jul/12/sheep-view-360-faroe-islands-google-mapping-project">Faroe Islands fit cameras to sheep to create Google Street View</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17206416">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17214750">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=kazinator">kazinator</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527867900"
+                                            href="https://news.ycombinator.com/user?id=wglb">wglb</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527950066"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    6 points
+                                    5 points
                                 </span>
                             </td>
                         </tr>
@@ -458,7 +458,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527951604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527952204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
