--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17188973" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17193243" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://faviconkit.com/?ref=hackernews">Favicon Kit – get and embed Favicons from any web site (CDN and API)</a>
+                                    <a href="https://github.com/jgavris/rs-git-fsmonitor">Fast `git status` (git core.fsmonitor in Rust)</a>
                                 </span>
                             </td>
                         </tr>
@@ -575,7 +575,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527955804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527956403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
