--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17188973" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17193243" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://faviconkit.com/?ref=hackernews">Favicon Kit – get and embed Favicons from any web site (CDN and API)</a>
+                                    <a href="https://github.com/jgavris/rs-git-fsmonitor">Fast `git status` (git core.fsmonitor in Rust)</a>
                                 </span>
                             </td>
                         </tr>
@@ -339,7 +339,7 @@
                                             href="https://news.ycombinator.com/user?id=adamch">adamch</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527816061"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    444 points
+                                    446 points
                                 </span>
                             </td>
                         </tr>
@@ -435,7 +435,7 @@
                                             href="https://news.ycombinator.com/user?id=Anon1096">Anon1096</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527785281"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    406 points
+                                    408 points
                                 </span>
                             </td>
                         </tr>
@@ -575,7 +575,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527955804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527956403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
