--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17188973" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17193243" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://faviconkit.com/?ref=hackernews">Favicon Kit – get and embed Favicons from any web site (CDN and API)</a>
+                                    <a href="https://github.com/jgavris/rs-git-fsmonitor">Fast `git status` (git core.fsmonitor in Rust)</a>
                                 </span>
                             </td>
                         </tr>
@@ -213,13 +213,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17211696">
                                         
-                                            259 comments
+                                            264 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=lando2319">lando2319</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527898667"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    352 points
+                                    354 points
                                 </span>
                             </td>
                         </tr>
@@ -243,7 +243,7 @@
                                             href="https://news.ycombinator.com/user?id=jstrieb">jstrieb</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527875296"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    343 points
+                                    344 points
                                 </span>
                             </td>
                         </tr>
@@ -435,7 +435,7 @@
                                             href="https://news.ycombinator.com/user?id=ilamont">ilamont</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527886430"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    286 points
+                                    287 points
                                 </span>
                             </td>
                         </tr>
@@ -453,13 +453,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17210880">
                                         
-                                            238 comments
+                                            239 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dankohn1">dankohn1</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527890869"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    278 points
+                                    280 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527955804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527956403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
