--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17188973" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17193243" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://faviconkit.com/?ref=hackernews">Favicon Kit – get and embed Favicons from any web site (CDN and API)</a>
+                                    <a href="https://github.com/jgavris/rs-git-fsmonitor">Fast `git status` (git core.fsmonitor in Rust)</a>
                                 </span>
                             </td>
                         </tr>
@@ -285,13 +285,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17211696">
                                         
-                                            259 comments
+                                            264 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=lando2319">lando2319</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527898667"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    352 points
+                                    354 points
                                 </span>
                             </td>
                         </tr>
@@ -315,7 +315,7 @@
                                             href="https://news.ycombinator.com/user?id=jstrieb">jstrieb</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527875296"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    343 points
+                                    344 points
                                 </span>
                             </td>
                         </tr>
@@ -525,7 +525,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17177955">
                                         
-                                            39 comments
+                                            40 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=thewanderer1999">thewanderer1999</a></strong> &nbsp;•&nbsp;
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527955804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527956403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
