--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/OpenDUNE/OpenDUNE">OpenDUNE – An open-source recreation of the game Dune II</a>
+                                    <a href="http://nicktasios.nl/posts/space-invaders-from-scratch-part-1.html">Space Invaders from Scratch</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17214320">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17166054">
                                         
-                                            61 comments
+                                            40 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mariuz">mariuz</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527943469"
+                                            href="https://news.ycombinator.com/user?id=Grieverheart">Grieverheart</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527409687"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    209 points
+                                    210 points
                                 </span>
                             </td>
                         </tr>
@@ -458,7 +458,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527958804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527959404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
