--- a/jobs/page2.html
+++ b/jobs/page2.html
@@ -67,20 +67,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17189652" class="node"><i
-                                            class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://writingstreak.io/?src=hn">Write every day, measure your progress, achieve your writing goals</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17210378" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://github.com/stereobooster/react-ideal-image/blob/master/introduction.md">An Almost Ideal React Image Component</a>
@@ -126,6 +112,20 @@
                                     <a href="https://news.ycombinator.com/item?id=17193243" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://github.com/jgavris/rs-git-fsmonitor">Fast `git status` (git core.fsmonitor in Rust)</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17192077" class="node"><i
+                                            class="fas fa-comment"></i></a>&nbsp;
+                                    <a href="http://itkit.io/">IT Kit – curated tools for IT managers</a>
                                 </span>
                             </td>
                         </tr>
@@ -315,7 +315,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527960004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527960604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
