--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -375,17 +375,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.recode.net/2018/5/31/17390030/uber-ceo-dara-khosrowshahi-code-conference-interview">Uber CEO says Uber and Alphabet are discussing working together on self-driving</a>
+                                    <a href="https://iotdarwinaward.com/post/improve-your-privacy-in-age-of-mass-surveillance/">Improving your privacy with 'data-model poisoning', pseudonymity and sockpuppets</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17195005">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17213719">
                                         
-                                            32 comments
+                                            21 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=aaggarwal">aaggarwal</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527757945"
+                                            href="https://news.ycombinator.com/user?id=DyslexicAtheist">DyslexicAtheist</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527931667"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     80 points
                                 </span>
@@ -399,17 +399,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.wsj.com/articles/judge-dismisses-kaspersky-suit-challenging-software-ban-1527711772">Judge Dismisses Kaspersky Suit Challenging Software Ban</a>
+                                    <a href="https://www.recode.net/2018/5/31/17390030/uber-ceo-dara-khosrowshahi-code-conference-interview">Uber CEO says Uber and Alphabet are discussing working together on self-driving</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17193172">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17195005">
                                         
-                                            54 comments
+                                            32 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=wglb">wglb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527728266"
+                                            href="https://news.ycombinator.com/user?id=aaggarwal">aaggarwal</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527757945"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     80 points
                                 </span>
@@ -458,7 +458,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527961204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527961804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
