--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.bbc.co.uk/news/resources/idt-sh/faroe_islands_postal_service">Living on a rock in the North Atlantic</a>
+                                    <a href="http://worrydream.com/Engelbart/">A few words on Doug Engelbart (2013)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17212917">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194456">
                                         
-                                            58 comments
+                                            76 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=sjcsjc">sjcsjc</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527917872"
+                                            href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527749697"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    197 points
+                                    200 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527963003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527963603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
