--- a/jobs/index.html
+++ b/jobs/index.html
@@ -161,7 +161,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.streak.com/careers#BackendEngineer">Streak Is Hiring Back End Engineers in  SF (YC S11)</a>
+                                    <a href="https://www.streak.com/careers#BackendEngineer">Streak Is Hiring Back-End Engineers in SF (YC S11)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
@@ -552,7 +552,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527964803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527965403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
