--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -285,7 +285,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17214841">
                                         
-                                            106 comments
+                                            109 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=simulate">simulate</a></strong> &nbsp;•&nbsp;
@@ -363,7 +363,7 @@
                                             href="https://news.ycombinator.com/user?id=infodroid">infodroid</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527942411"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    78 points
+                                    79 points
                                 </span>
                             </td>
                         </tr>
@@ -399,17 +399,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.reddit.com/r/Entrepreneur/comments/8nittg/im_ray_dalio_ask_me_anything_answering_questions/">Ray Dalio AMA</a>
+                                    <a href="https://picoevb.com/">PicoEVB – Artix-7 FPGA board with M.2 interface</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17206300">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17214857">
                                         
-                                            38 comments
+                                            25 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mudil">mudil</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527867356"
+                                            href="https://news.ycombinator.com/user?id=bem94">bem94</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527951664"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     76 points
                                 </span>
@@ -458,7 +458,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527976804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527977403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
