--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -483,7 +483,7 @@
                                             href="https://news.ycombinator.com/user?id=jstrieb">jstrieb</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527875296"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    358 points
+                                    359 points
                                 </span>
                             </td>
                         </tr>
@@ -519,19 +519,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://80000hours.org/podcast/episodes/aaron-hamlin-voting-refor/">Politics is bad because we use an 18th century voting system</a>
+                                    <a href="https://github.com/OpenDUNE/OpenDUNE">OpenDUNE – An open-source recreation of the game Dune II</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17205357">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17214320">
                                         
-                                            335 comments
+                                            92 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=robertwiblin">robertwiblin</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527861562"
+                                            href="https://news.ycombinator.com/user?id=mariuz">mariuz</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527943469"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    335 points
+                                    337 points
                                 </span>
                             </td>
                         </tr>
@@ -575,7 +575,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527976804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527977403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
