--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -423,17 +423,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://arxiv.org/abs/1801.00631">Deep learning: a critical appraisal</a>
+                                    <a href="https://twitter.com/sandofsky/status/1002637340291018754">Facebook moving away from React Native</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216536">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17216628">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=fanf2">fanf2</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527975781"
+                                            href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527976844"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     4 points
                                 </span>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527977403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527978003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
