--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17206889" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17215474" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://slacklunch.club">Slack Lunch Club</a>
+                                    <a href="https://www.verdaccio.org/">Verdaccio – Open-Source Lightweight private NPM proxy registry</a>
                                 </span>
                             </td>
                         </tr>
@@ -495,17 +495,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.fastcompany.com/40579141/microsoft-is-now-worth-more-than-google">Microsoft is now worth more than Alphabet</a>
+                                    <a href="http://ciml.info/">A Course in Machine Learning</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17196880">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17214588">
                                         
-                                            176 comments
+                                            23 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Bhilai">Bhilai</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527779516"
+                                            href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527947521"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     209 points
                                 </span>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://db.cs.berkeley.edu/papers/fntdb07-architecture.pdf">Architecture of a Database System (2007) [pdf]</a>
+                                    <a href="https://www.fastcompany.com/40579141/microsoft-is-now-worth-more-than-google">Microsoft is now worth more than Alphabet</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17190947">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17196880">
                                         
-                                            13 comments
+                                            176 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527708678"
+                                            href="https://news.ycombinator.com/user?id=Bhilai">Bhilai</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527779516"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     209 points
                                 </span>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527983403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527984003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
