--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17206889" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17215474" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://slacklunch.club">Slack Lunch Club</a>
+                                    <a href="https://www.verdaccio.org/">Verdaccio – Open-Source Lightweight private NPM proxy registry</a>
                                 </span>
                             </td>
                         </tr>
@@ -267,7 +267,7 @@
                                             href="https://news.ycombinator.com/user?id=mariuz">mariuz</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527943469"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    357 points
+                                    359 points
                                 </span>
                             </td>
                         </tr>
@@ -483,7 +483,7 @@
                                             href="https://news.ycombinator.com/user?id=ilamont">ilamont</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527886430"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    306 points
+                                    307 points
                                 </span>
                             </td>
                         </tr>
@@ -525,7 +525,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17210880">
                                         
-                                            255 comments
+                                            256 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dankohn1">dankohn1</a></strong> &nbsp;•&nbsp;
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527983403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527984003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
